[package]
name = "symdep"
version = "0.1.1"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2021"
description = "Command line tool to show the imports and exports of binaries."
repository = "https://github.com/Berrysoft/symdep"
license = "MIT"

[dependencies]
goblin = "0.9"
clap = { version = "4.0", features = ["derive"] }
msvc-demangler = "0.10"
cpp_demangle = "0.4"
rustc-demangle = "0.1"

[target.'cfg(any(target_os = "linux", target_os = "illumos", target_os = "solaris"))'.dependencies]
libc = "0.2"

[build-dependencies]
cfg_aliases = "0.2"
