[package]
name = "symdep"
version = "0.1.2"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2021"
description = "Command line tool to show the imports and exports of binaries."
repository = "https://github.com/Berrysoft/symdep"
license = "MIT"

[dependencies]
goblin = "0.10"
clap = { version = "4.0", features = ["derive"] }
symbolic-common = "12"
symbolic-demangle = "12"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "illumos", target_os = "solaris"))'.dependencies]
libc = "0.2"

[build-dependencies]
cfg_aliases = "0.2"

[profile.release]
lto = true
codegen-units = 1
